--- a/mephisto/client/full/webapp/package.json
+++ b/mephisto/client/full/webapp/package.json
@@ -28,7 +28,7 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.4.4",
     "react-table": "^7.0.0",
-    "typescript": "~3.7.2"
+    "typescript": "^3.7.5"
   },
   "scripts": {
     "start": "react-scripts start",
