--- a/mephisto/client/full/webapp/package.json
+++ b/mephisto/client/full/webapp/package.json
@@ -18,6 +18,7 @@
     "axios": "^0.21.1",
     "axios-hooks": "1.9.0",
     "classnames": "^2.2.6",
+    "dotenv": "^8.2.0",
     "formik": "^2.1.4",
     "lodash.isempty": "^4.4.0",
     "moment": "^2.24.0",
